--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <style>
-body {
-   background-color: blue;
 <h1>Hello World!!</h1>
 <p>I'm hosted with GitHub Pages.</p>
+
+body {
+   background-color: orange;
    }
+
 </html>
