--- a/index.html
+++ b/index.html
@@ -1,7 +1,233 @@
 <!DOCTYPE html>
+<?php if (substr_count($_SERVER['HTTP_ACCEPT_ENCODING'], 'gzip')) ob_start("ob_gzhandler"); else ob_start(); ?>
 <html>
-<style>
-<h1>Hello World!!</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<head>
+		<title>Michael Deng</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="css/bootstrap.min.css" media="screen">
+    <link rel="stylesheet" href="css/custom-styles.css" media="screen">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Slab:400,700' rel='stylesheet' type='text/css'>
+    <meta charset="UTF-8">
+    <meta name="description" content="View Michael Deng's personal website">
+    <meta name="author" content="Michael Deng">
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-55613013-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+	</head>
+	<body>
+
+        <!-- Carousel -->
+          <div id="myCarousel" class="carousel slide" data-interval="false" data-wrap="false">
+        <!-- Carousel indicators
+              <ol class="carousel-indicators">
+                  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                  <li data-target="#myCarousel" data-slide-to="1"></li>
+                  <li data-target="#myCarousel" data-slide-to="2"></li>
+              </ol> -->
+
+        <!-- Carousel items -->
+              <div class="carousel-inner">
+                  <div class="item dark-background active">
+                    <div class="container">
+                      <h1 class="home-heading-position"><strong>Michael Deng</strong></h1>
+
+                      <div class="icons">
+                        <a href="https://www.linkedin.com/in/michael-deng" class="fa fa-linkedin-square fa-2x social-media" id="linkedin"></a>
+                        <a href="https://github.com/michael-deng" class="fa fa-github-square fa-2x social-media" id="github"></a>
+                        <a href="https://www.facebook.com/themichaeldeng" class="fa fa-facebook-square fa-2x social-media" id="facebook"></a>
+                      </div>
+
+                <!-- Push menu button -->
+                      <div class="main">
+                          <section>
+                              <!-- Class "cbp-spmenu-open" gets applied to menu and "cbp-spmenu-push-toleft" or "cbp-spmenu-push-toright" to the body -->
+                              <div class="toggle-slide-left1 toggle-menu menu-left push-body">
+                                <div class="btn">Menu</div>
+                              </div>
+                          </section>
+                      </div>
+
+                    </div>
+                  </div>
+
+                  <div class="item light-background">
+                    <div class="container">
+                      <h1 class="heading-position"><strong>About Me</strong></h1>
+
+                      <!-- <div class="thumbnails">
+                        <img src="images/doggie.jpg" height="80" width="80">
+                        <img src="images/banff.jpg" height="80" width="80">
+                        <img src="images/family.jpg" height="80" width="80">
+                        <img src="images/canoeing.jpg" height="80" width="80">
+                        <img src="images/horseriding.jpg" height="80" width="80">
+                        <img src="images/volleyball.jpg" height="80" width="80">
+                        <img src="images/burgers.jpg" height="80" width="80">
+                        <img src="images/snowboarding.jpg" height="80" width="80">
+                      </div> -->
+
+                      <h3 class="caption-position">
+                        Hey there! My name is Michael, and I was raised in Alberta, Canada. After high school, I headed for the sunny West Coast to attend UC Berkeley. I'm currently completing my bachelor's degree in Electrical Engineering and Computer Science. Outside of school, I love playing indoor and beach volleyball, having most recently represented Cal on its varsity team. The rest of my spare time, I enjoy reading about tech, outdoor activities like hiking and canoeing, all types of music, card games and burgers.
+                      </h3>
+
+                      
+
+                <!-- Push menu button -->
+                      <div class="main">
+                          <section>
+                              <!-- Class "cbp-spmenu-open" gets applied to menu and "cbp-spmenu-push-toleft" or "cbp-spmenu-push-toright" to the body -->
+                              <div class="toggle-slide-left2 toggle-menu menu-left push-body">
+                                <div class="btn">Menu</div>
+                              </div>
+                          </section>
+                      </div>
+
+                    </div>
+                  </div>
+
+                  <div class="item light-background">
+                    <div class="container">
+                      <h1 class="heading-position"><strong>Experience</strong></h1>
+                      <h3 class="caption-position">
+                        In <b>Summer 2016</b>, I worked at <b>Uber</b> as a <b>Software Engineering Intern</b> for the fraud engineering team.
+                      </h3>
+                      <h3 class="caption-position">
+                        In <b>Summer 2015</b>, I worked at <b>Workday</b> as a <b>Software Developer Intern</b> for the financial technologies team.
+                      </h3>
+                      <h3 class="caption-position">
+                        In <b>Fall 2014</b>, I stayed at <b>UC Berkeley</b> to work as an <b>Undergraduate Researcher</b>. I was a member of the data analytics research team.
+                      </h3>
+
+                <!-- Push menu button -->
+                      <div class="main">
+                          <section>
+                              <!-- Class "cbp-spmenu-open" gets applied to menu and "cbp-spmenu-push-toleft" or "cbp-spmenu-push-toright" to the body -->
+                              <div class="toggle-slide-left3 toggle-menu menu-left push-body">
+                                <div class="btn">Menu</div>
+                              </div>
+                          </section>
+                      </div>
+
+                    </div>
+                  </div>
+
+                  <div class="item light-background">
+                    <div class="container wide">
+                      <h1 class="heading-position" style="margin-bottom: 0;"><strong>Projects</strong></h1>
+                      <h3 class="caption-position projects-info">
+
+                        <div class="row">
+                          <div class="col-sm-4">
+                            <a href="http://www.unicornbase.com/">
+                              <img src="images/unicornbase.png" class="project-thumbnail">
+                            </a>
+                            <div class="project-caption">
+                              <span><a href="http://www.unicornbase.com/" class="hyperlink">Unicornbase</a></span><br />
+                              Idea-sharing and feedback platform to foster collaboration between creators
+                            </div>
+                          </div>
+                          <div class="col-sm-4">
+                            <a href="http://www.calakpsi.com/">
+                              <img src="images/calakpsi.png" class="project-thumbnail">
+                            </a>
+                            <div class="project-caption">
+                              <span><a href="http://www.calakpsi.com/" class="hyperlink">Alpha Kappa Psi</a></span><br />
+                              Online platform for my professional business fraternity at Berkeley
+                            </div>
+                          </div>
+                          <div class="col-sm-4">
+                            <a href="http://berkeley-mosc.github.io/">
+                              <img src="images/mosc.png" class="project-thumbnail">
+                            </a>
+                            <div class="project-caption">
+                              <span><a href="http://berkeley-mosc.github.io/" class="hyperlink">MOSC</a></span><br />
+                              Virtual cell tower that filters calls/texts during emergencies to prevent overload
+                            </div>
+                          </div>
+                        </div>
+                      </h3>
+
+                <!-- Push menu button -->
+                      <div class="main">
+                          <section>
+                              <!-- Class "cbp-spmenu-open" gets applied to menu and "cbp-spmenu-push-toleft" or "cbp-spmenu-push-toright" to the body -->
+                              <div class="toggle-slide-left4 toggle-menu menu-left push-body">
+                                <div class="btn">Menu</div>
+                              </div>
+                          </section>
+                      </div>
+
+                    </div>
+                  </div>
+
+                  <div class="item light-background">
+                    <div class="container">
+                      <h1 class="heading-position"><strong>Other</strong></h1>
+                      <h3 class="caption-position">I love playing indoor and beach volleyball, having played for many years on club teams, school teams, and most recently UC Berkeley's varsity team. I also like to spend a lot of time outside, either hiking, canoeing, camping, or simply exploring new places. During the rest of my spare time, I enjoy old-school photography and music, card games like Poker, Bridge and Durak, following Game of Thrones and Rick and Morty, seeing new films, and playing the violin.</h3>
+
+                <!-- Push menu button -->
+                      <div class="main">
+                          <section>
+                              <!-- Class "cbp-spmenu-open" gets applied to menu and "cbp-spmenu-push-toleft" or "cbp-spmenu-push-toright" to the body -->
+                              <div class="toggle-slide-left5 toggle-menu menu-left push-body">
+                                <div class="btn">Menu</div>
+                              </div>
+                          </section>
+                      </div>
+
+                    </div>
+                  </div>
+
+
+
+              </div>
+
+
+
+        <!-- Carousel nav
+              <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left"></span>
+              </a>
+              <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right"></span>
+              </a>
+        
+          </div> -->
+
+        <!-- Push Menu -->
+
+          <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left">
+              <br />
+              <br />
+              <br />
+              <br />
+              <br />
+              <a href='#' class="button1 menu-buttons" onClick="javascript:goToSlide(0);">Home</a>
+              <a href='#' class="button2 menu-buttons" onClick="javascript:goToSlide(1);">About Me</a>
+              <a href="#" class="button3 menu-buttons" onClick="javascript:goToSlide(2);">Experience</a>
+              <a href="#" class="button4 menu-buttons" onClick="javascript:goToSlide(3);">Projects</a>
+              <a href="mailto:michaeldeng18@gmail.com" class="button5 menu-buttons hyperlink">Contact</a>
+              <!-- <a href="#" class="button5 menu-buttons" onClick="javascript:goToSlide(4);">Contact</a> -->
+              <!-- <a href="https://www.linkedin.com/in/michaeldeng18" class="fa fa-linkedin-square fa-lg social-media" id="linkedin"></a>
+              <a href="https://github.com/michael-deng" class="fa fa-github-square fa-lg social-media" id="github"></a>
+              <a href="https://www.facebook.com/michael.deng.90?ref=tn_tnmn" class="fa fa-facebook-square fa-lg social-media" id="facebook"></a>
+              <a href="http://attachments.angel.co/48797-b3508de2e650270cca8db739eade90bf.pdf?1418782681" class="fa fa-file-pdf-o fa-lg social-media" id="resume"></a> -->
+          </nav>
+
+        <!-- Javascripts -->
+          <script src="http://code.jquery.com/jquery.min.js"></script>
+          <script src="js/bootstrap.min.js"></script>
+          <script src="js/custom-scripts.js"></script>
+          <script src="bower_components/classie/classie.js"></script>
+	</body>
 </html>
